ola-parser/src/testdata/syntaxTests/natspec/docstring_empty_tag.sol
abstract contract C {
    /// @param
    fn vote(u256 id)  {}
}
// ----
// DocstringParsingError 3335: (26-36): No param name given
